# agentfuse

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  PROGRESS.md  README.md  package-lock.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
_project/: BUILD_LOG.md  DEEP_RESEARCH_DOC.md  FEATURE_IDEAS.md  FIX_GUIDE.md  HELP_NEEDED.md  RESEARCH_QUESTIONS.md  TODO.md  round2-fixes.md
agentfuse/: __init__.py  gateway.py
agentfuse/core/: __init__.py  adaptive_threshold.py  analytics.py  anomaly.py  batch_detector.py  batch_submitter.py  budget.py  cache.py  cache_monitor.py  cache_quality.py  context_guard.py  conversation_estimator.py  cost_alert.py  cost_attribution.py  cost_forecast.py  cost_tracker.py  dedup.py  deprecation.py  error_classifier.py  fallback_chain.py  gcra_limiter.py  guardrails.py  hierarchical_budget.py  keys.py  kill_switch.py  load_balancer.py  loop.py  middleware.py  model_recommender.py  model_router.py  predictive_router.py  prompt_cache.py  prompt_compressor.py  quality_scorer.py  rate_limiter.py  receipt.py  report_exporter.py  request_optimizer.py  response_validator.py  retry.py  (+5 more)
agentfuse/dashboard/: __init__.py  routes.py  server.py
agentfuse/integrations/: __init__.py  crewai.py  langchain.py  langgraph.py  mcp.py  openai_agents.py  pydantic_ai.py
agentfuse/intent_atoms/: __init__.py
agentfuse/observability/: __init__.py  logging.py  metrics.py  otel.py
agentfuse/providers/: __init__.py  anthropic.py  mock_responses.py  openai.py  pricing.py  registry.py  response.py  responses_api.py  router.py  stream_usage.py  token_pattern.py  tokenizer.py
agentfuse/storage/: __init__.py  async_recorder.py  memory.py  redis.py  redis_store.py  redis_vector_store.py  spend_ledger.py  sqlite.py
examples/: crewai_example.py  e2e_real_test.py  langchain_example.py  openai_basic.py
tests/: __init__.py  test_budget_engine.py  test_cache_middleware.py  test_integrations.py  test_loop_detection.py  test_mock_responses.py  test_pricing.py  test_receipt.py  test_retry.py  test_thread_safety.py  test_tokenizer.py
tests/integration/: test_redis_budget.py  test_two_tier_cache.py
tests/unit/: conftest.py  test_900_milestone.py  test_action_loop.py  test_adaptive_threshold.py  test_all_integrations.py  test_analytics.py  test_anomaly_detector.py  test_api_surface.py  test_async_recorder.py  test_async_retry.py  test_azure_bedrock.py  test_batch_detector.py  test_batch_submitter.py  test_budget_engine.py  test_cache_key.py  test_cache_middleware.py  test_cache_monitor.py  test_cache_security.py  test_combined_features.py  test_concurrency_safety.py  test_context_guard.py  test_conversation_estimator.py  test_cost_alert.py  test_cost_attribution.py  test_cost_forecast.py  test_cost_tracker.py  test_dashboard.py  test_dedup.py  test_deprecation.py  test_edge_cases.py  test_edge_cases_advanced.py  test_end_to_end.py  test_error_classifier.py  test_fallback_chain.py  test_final_push_1000.py  test_full_flow.py  test_gateway.py  test_gcra_limiter.py  test_guardrails.py  test_hierarchical_budget.py  (+53 more)
