[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfuse-runtime"
version = "0.1.0"
description = "Intelligent LLM agent cost optimization runtime — semantic caching + graduated budget enforcement"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["llm", "ai-agents", "cost-optimization", "semantic-caching",
            "budget-enforcement", "langchain", "crewai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
langchain = ["langchain>=0.1.0"]
all = ["openai>=1.0.0", "anthropic>=0.20.0", "langchain>=0.1.0"]

[project.urls]
Homepage = "https://agentfuse.dev"
Repository = "https://github.com/vinaybudideti/agentfuse"
Documentation = "https://agentfuse.dev/docs"

[tool.setuptools.packages.find]
include = ["agentfuse*"]

[tool.pytest.ini_options]
# Cache tests must run AFTER integration tests (which also init FAISS).
# Specifying explicit file order prevents FAISS segfault from multiple
# CacheMiddleware instances being created in the wrong order.
testpaths = [
    "tests/test_budget_engine.py",
    "tests/test_pricing.py",
    "tests/test_tokenizer.py",
    "tests/test_retry.py",
    "tests/test_receipt.py",
    "tests/test_loop_detection.py",
    "tests/test_mock_responses.py",
    "tests/test_thread_safety.py",
    "tests/test_integrations.py",
    "tests/test_cache_middleware.py",
]
