[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfuse-runtime"
version = "0.2.2"
description = "Intelligent LLM agent cost optimization runtime — per-run budget enforcement, semantic caching, model routing across 15 providers"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Vinay Kumar Reddy Budideti", email = "vinaybudideti@gmail.com"},
]
keywords = [
    "llm", "ai-agents", "cost-optimization", "semantic-caching",
    "budget-enforcement", "model-routing", "langchain", "crewai",
    "openai-agents", "langgraph", "mcp", "pydantic-ai",
    "openai", "anthropic", "gemini", "deepseek",
    "llm-gateway", "token-counting", "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "sentence-transformers>=3.0",
    "cachetools>=5.3",
    "structlog>=24.0",
    "tenacity>=8.2",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
otel = ["opentelemetry-sdk>=1.20", "opentelemetry-api>=1.20"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
gemini = ["google-genai>=1.0"]
langchain = ["langchain-core>=0.3"]
all = [
    "redis>=5.0",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-api>=1.20",
    "openai>=1.0",
    "anthropic>=0.20",
    "google-genai>=1.0",
    "langchain-core>=0.3",
    "prometheus-client>=0.20",
]

[project.urls]
Homepage = "https://github.com/vinaybudideti/agentfuse"
Repository = "https://github.com/vinaybudideti/agentfuse"
"Bug Tracker" = "https://github.com/vinaybudideti/agentfuse/issues"
Changelog = "https://github.com/vinaybudideti/agentfuse/blob/main/README.md#changelog"

[tool.setuptools.packages.find]
include = ["agentfuse*"]

[tool.setuptools.package-data]
agentfuse = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["*.json", "*.css", "*.jsx", "*.svg", "*.html"]

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/test_budget_engine.py",
    "tests/test_pricing.py",
    "tests/test_tokenizer.py",
    "tests/test_retry.py",
    "tests/test_receipt.py",
    "tests/test_loop_detection.py",
    "tests/test_mock_responses.py",
    "tests/test_thread_safety.py",
    "tests/test_integrations.py",
    "tests/test_cache_middleware.py",
]
